<?xml version="1.0"?>
<package>
  <name>rqt_mbgl</name>
  <version>0.0.0</version>
  <description>The Mapbox GL package</description>

  <maintainer email="michael.krasnyk@gmail.com">Michael Kransyk</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/mapbox/mapbox-gl-native/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
